--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBlack">#000000</color>
     <color name="card_view">#FFCCCC</color>
+    <color name="white">#ffffff</color>
+    <color name="white_pressed">#66FF66</color>
+    <color name="half_black">#ff0000</color>
+    <color name="red">#ff0000</color>
+    <color name="red_q">#FF5151</color>
 </resources>
