--- a/app/src/main/res/layout/activity_addmemo.xml
+++ b/app/src/main/res/layout/activity_addmemo.xml
@@ -50,6 +50,9 @@
         </LinearLayout>
     </LinearLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -92,7 +95,7 @@
                     <EditText
                         android:id="@id/memo_title"
                         android:layout_width="match_parent"
-                        android:layout_height="80dp"
+                        android:layout_height="50dp"
                         android:hint="便签标题"
                         />
                 </android.support.design.widget.TextInputLayout>
@@ -100,16 +103,34 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
+
                     app:hintTextAppearance="@style/MyStyle">
 
-                    <EditText
+                    <view.MyEditText
                         android:id="@id/memo_content"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="便签内容"
                         />
                 </android.support.design.widget.TextInputLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp">
+
+
+
+                <SurfaceView
+                    android:id="@id/surfaceview"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp" />
+
+                <ImageView
+                    android:id="@id/imageview"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:src="@drawable/ic_action_camera"/>
+                </RelativeLayout>
 
             </LinearLayout>
 
@@ -138,13 +159,6 @@
                     app:fabSize="mini"
                     fab:fab_title="点击插入图片"/>
 
-                <com.getbase.floatingactionbutton.FloatingActionButton
-                    android:id="@id/float_camera"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/icon_camera"
-                    app:fabSize="mini"
-                    fab:fab_title="拍照"/>
 
                 <com.getbase.floatingactionbutton.FloatingActionButton
                     android:id="@id/float_movie"
@@ -166,4 +180,5 @@
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
+    </ScrollView>
 </LinearLayout>
